# kanbot

./: .gitignore  LICENSE  README.md  pyproject.toml  vercel.json
.github/workflows/: release.yml
deckhand/: __init__.py  agents.py  cli.py  config.py
deckhand/runner/: __init__.py  agents.py  discovery.py  worker.py
deckhand/server/: app.py  db.py  hub.py  schemas.py
deckhand/server/static/: app.js  index.html  styles.css
kanbot/: __init__.py  agents.py  cli.py  config.py  distill.py  profiles.py  workflows.py
kanbot/runner/: agents.py  discovery.py  worker.py
kanbot/server/: __init__.py  app.py  db.py  hub.py  insights.py  schemas.py
kanbot/server/static/: app.js  index.html  styles.css
kanbot/training/: __init__.py  evaluator.py  groundtruth.py  optimizer.py  sandbox.py
scripts/: deploy.sh  e2e.py  e2e_live.py  e2e_loop.py  e2e_revive.py
