[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanbot"
version = "0.1.0"
description = "A Kanban board where every card is a task run by your local CLI coding agents (Claude, Codex, Gemini, GLM/ZAI, or any CLI you define)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Deckhand" }]
keywords = ["kanban", "agents", "claude", "codex", "automation", "cli"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
kanbot = "deckhand.cli:main"
deckhand = "deckhand.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/deckhand"

[tool.hatch.build.targets.wheel]
packages = ["deckhand"]

[tool.hatch.build.targets.wheel.force-include]
"deckhand/server/static" = "deckhand/server/static"
