[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanbot"
version = "0.2.0"
description = "A Kanban board where every card is a task run by your local CLI coding agents (Claude, Codex, Gemini, GLM/ZAI, or any CLI you define)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "KanBot" }]
keywords = ["kanban", "agents", "claude", "codex", "automation", "cli"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
kanbot = "kanbot.cli:main"

[project.urls]
Homepage = "https://github.com/publu/kanbot"
Repository = "https://github.com/publu/kanbot"
Demo = "https://getkanbot.vercel.app"

[tool.hatch.build.targets.wheel]
packages = ["kanbot"]
# Static UI ships automatically as it lives inside the kanbot package; no
# force-include needed (and adding one double-adds the files and breaks the build).
artifacts = ["kanbot/server/static/**"]
